# cmake_pro1

./: CMakeLists.txt
projects/: CMakeLists.txt
projects/fibo_series/: CMakeLists.txt
projects/fibo_series/inc/: fibo.h
projects/fibo_series/src/: fibo.cpp
projects/palinedrome/: CMakeLists.txt
projects/palinedrome/inc/: pal.h
projects/palinedrome/src/: pal.cpp
projects/prime_num/: CMakeLists.txt
projects/prime_num/inc/: prime.h
projects/prime_num/src/: prime.cpp
projects/sayBye/: CMakeLists.txt
projects/sayBye/src/: bye.cpp
projects/sumOfdigit/: CMakeLists.txt
projects/sumOfdigit/src/: SOD.cpp
